--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,5 +14,6 @@
         android:textColor="#ffff0500"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="111dp" />
+        android:layout_marginBottom="111dp"
+        android:onClick="set_emergency_number" />
 </RelativeLayout>
