SAVE WORK (In the middle of maps implementation)
I also want to check if the damn ban on github by Indian government
stops me from pushing my work. I was able to pull a repo just now.

Signed-off-by: Aditya Prasad <adityaprasadiskool@gmail.com>

--- a/app/src/main/res/layout/activity_edit_emergency_number.xml
+++ b/app/src/main/res/layout/activity_edit_emergency_number.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/emergencyhead"
+        android:text="@string/emergency_head"
         android:id="@+id/textView2"
         android:textSize="27sp"
         android:layout_alignParentTop="true"
