--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,7 +3,8 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Home">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Home"
+    android:onClick="start_journey">
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -12,8 +13,30 @@
         android:text="@string/emergency"
         android:id="@+id/button_emergency"
         android:textColor="#ffff0500"
-        android:layout_alignParentBottom="true"
+        android:onClick="set_emergency_number"
+        android:layout_below="@+id/button"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="111dp"
-        android:onClick="set_emergency_number" />
+        android:layout_marginTop="49dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/start_navigate"
+        android:id="@+id/button"
+        android:onClick="start_journey"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="209dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/home_heading"
+        android:id="@+id/textView5"
+        android:layout_marginTop="38dp"
+        android:textColor="#ff00c3ff"
+        android:textSize="34dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
