save the implementations of gt
This is the code we showed the other team members on 6th.
the app crashes on back from save numbers activity. and code
is yet to be formatted in master.

Signed-off-by: Aditya Prasad <adityaprasadiskool@gmail.com>

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -39,4 +39,13 @@
         android:textSize="34dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/textView6"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
