--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,9 +14,8 @@
         android:id="@+id/button_emergency"
         android:textColor="#ffff0500"
         android:onClick="set_emergency_number"
-        android:layout_below="@+id/button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="49dp" />
+        android:layout_above="@+id/textView6"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -25,19 +24,6 @@
         android:id="@+id/button"
         android:onClick="start_journey"
         android:layout_marginTop="62dp"
-        android:layout_below="@+id/textView5"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/home_heading"
-        android:id="@+id/textView5"
-        android:layout_marginTop="38dp"
-        android:textColor="#ff00c3ff"
-        android:textSize="34dp"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -51,10 +37,30 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="View Profile"
+        android:text="@string/showprofile"
         android:id="@+id/button5"
-        android:layout_below="@+id/button_emergency"
+        android:onClick="showProfile"
+        android:layout_marginTop="33dp"
+        android:layout_below="@+id/button8"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fuel Details"
+        android:id="@+id/button6"
+        android:onClick="fuelDetails"
+        android:layout_below="@+id/button"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp" />
+        android:layout_marginTop="26dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Graph"
+        android:id="@+id/button8"
+        android:layout_marginTop="37dp"
+        android:layout_below="@+id/button6"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
