--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -61,6 +61,7 @@
         android:id="@+id/button8"
         android:layout_marginTop="37dp"
         android:layout_below="@+id/button6"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="showWeather" />
 
 </RelativeLayout>
