Polished the features
I got the loading of the graph to be cancelable,

Fixed crash of fuel data update. The problems left in that area
is due to the set data structure being used. (I have to get around
learning how to efficiently use it.)

Made profile better arranged, Made blood group edit text single line.

Signed-off-by: Aditya Prasad <adityaprasadiskool@gmail.com>

--- a/app/src/main/res/layout/activity_fuel_details.xml
+++ b/app/src/main/res/layout/activity_fuel_details.xml
@@ -20,7 +20,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:ems="10"
         android:id="@+id/editTextfueladded"
         android:layout_marginTop="32dp"
