--- a/app/src/main/res/layout/activity_name_blood_group.xml
+++ b/app/src/main/res/layout/activity_name_blood_group.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/editTextbloodgroup"
         android:hint="Blood Group"
+        android:singleLine="true"
         android:layout_below="@+id/textView7"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="35dp" />
