Added fuel remaining feature
Now the app will calculate the **total fuel filled** from what the user
entered, the **total fuel consumed** from the total distance travelled
(from revolutions send by server) and an estimated milege of the bike
in use.

I got the server URL into a central location - Home.java

Increased server interaction speed by 8 times, we send the data in a
single request delimited by '#'. thus we no longer send seperate
requests for the total revolutions in each day.

I got the app to check for network connectivity before showing the
graph.

Signed-off-by: Aditya Prasad <adityaprasadiskool@gmail.com>

--- a/app/src/main/res/layout/activity_show_profile.xml
+++ b/app/src/main/res/layout/activity_show_profile.xml
@@ -97,10 +97,28 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="User Profile"
         android:id="@+id/textView11"
-        android:layout_marginTop="45dp"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/textView8"
-        android:layout_toEndOf="@+id/textView8"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp" />
+        android:layout_toRightOf="@+id/textView9"
+        android:layout_toEndOf="@+id/textView9" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="ESTIMATED PETROL REMAINING"
+        android:id="@+id/textView5"
+        android:layout_marginTop="39dp"
+        android:layout_below="@+id/textView9"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Unknown"
+        android:id="@+id/textViewpetrolleft"
+        android:layout_marginTop="33dp"
+        android:layout_below="@+id/textView5"
+        android:layout_toRightOf="@+id/textView12"
+        android:layout_toEndOf="@+id/textView12" />
 </RelativeLayout>
