Heavy changes by VishnuGt
Pinging server continously for accident detection and overspeeding.

Notification added for if petrol value crosses the threshold limit

@vishnugt

Signed-off-by: VishnuGt <vishnugt@hotmail.com>

--- a/app/src/main/res/layout/activity_show_profile.xml
+++ b/app/src/main/res/layout/activity_show_profile.xml
@@ -115,7 +115,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Unknown"
+        android:text="Calculating..."
         android:id="@+id/textViewpetrolleft"
         android:layout_marginTop="33dp"
         android:layout_below="@+id/textView5"
