--- a/app/src/main/res/layout/activity_edit_emergency_number.xml
+++ b/app/src/main/res/layout/activity_edit_emergency_number.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.sangam.aditya.smarthelmet.EditEmergencyNumber">
+    tools:context="com.sangam.aditya.smarthelmet.EditEmergencyNumber"
+    android:background="#ffff0500">
 
 
     <TextView
