--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Home"
-    android:onClick="start_journey">
+    android:background="#ffff0500">
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -12,7 +12,6 @@
         android:layout_height="wrap_content"
         android:text="@string/emergency"
         android:id="@+id/button_emergency"
-        android:textColor="#ffff0500"
         android:onClick="set_emergency_number"
         android:layout_above="@+id/textView6"
         android:layout_centerHorizontal="true" />
