--- a/app/src/main/res/layout/activity_set_destination.xml
+++ b/app/src/main/res/layout/activity_set_destination.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.sangam.aditya.smarthelmet.SetDestination">
+    tools:context="com.sangam.aditya.smarthelmet.SetDestination"
+    android:background="#ffff0500">
 
     <Button
         android:layout_width="wrap_content"
@@ -21,6 +22,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/editTextSource"
         android:hint="Source"
+        android:singleLine="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -29,6 +31,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:singleLine="true"
         android:id="@+id/editTextDestination"
         android:hint="Destination"
         android:layout_centerVertical="true"
