--- a/app/src/main/res/layout/activity_show_profile.xml
+++ b/app/src/main/res/layout/activity_show_profile.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.sangam.aditya.smarthelmet.ShowProfile">
+    tools:context="com.sangam.aditya.smarthelmet.ShowProfile"
+    android:background="#ffff0500">
 
     <TextView
         android:layout_width="wrap_content"
