--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Home"
-    android:background="#ffff0500">
+    android:background="#ff2ee4ff">
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -22,7 +22,8 @@
         android:text="@string/start_navigate"
         android:id="@+id/button"
         android:onClick="start_journey"
-        android:layout_marginTop="62dp"
+        android:layout_marginBottom="23dp"
+        android:layout_above="@+id/button9"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -37,30 +38,49 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/showprofile"
-        android:id="@+id/button5"
+        android:layout_marginBottom="23dp"
         android:onClick="showProfile"
-        android:layout_marginTop="33dp"
-        android:layout_below="@+id/button8"
-        android:layout_centerHorizontal="true" />
+        android:layout_above="@+id/button_emergency"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/button5" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Fuel Details"
+        android:text="Update Fuel"
         android:id="@+id/button6"
         android:onClick="fuelDetails"
-        android:layout_below="@+id/button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Graph"
         android:id="@+id/button8"
-        android:layout_marginTop="37dp"
-        android:layout_below="@+id/button6"
+        android:onClick="showWeather"
+        android:layout_above="@+id/button5"
         android:layout_centerHorizontal="true"
-        android:onClick="showWeather" />
+        android:layout_marginBottom="13dp"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Show Details"
+        android:id="@+id/button9"
+        android:onClick="showDetails"
+        android:layout_above="@+id/button6"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="23dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Hello User"
+        android:id="@+id/textViewhellouser"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
