--- a/app/src/main/res/layout/activity_name_blood_group.xml
+++ b/app/src/main/res/layout/activity_name_blood_group.xml
@@ -30,19 +30,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/spinnerbikecompany"
-        android:layout_marginTop="66dp"
         android:spinnerMode="dropdown"
-        android:layout_below="@+id/editTextbloodgroup"
+        android:focusable="true"
+        android:layout_below="@+id/textView19"
         android:layout_alignParentLeft="true"
-        android:focusable="true" />
+        android:layout_alignParentStart="true" />
 
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/spinnerbikemodel"
         android:spinnerMode="dropdown"
-        android:layout_marginTop="52dp"
-        android:layout_below="@+id/spinnerbikecompany"
+        android:layout_below="@+id/textView18"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -52,9 +51,31 @@
         android:layout_height="wrap_content"
         android:text="@string/next"
         android:id="@+id/button4"
+        android:onClick="goToHome"
         android:layout_below="@+id/spinnerbikemodel"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="47dp"
-        android:onClick="goToHome" />
+        android:layout_marginTop="30dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Bike Model"
+        android:id="@+id/textView18"
+        android:layout_below="@+id/spinnerbikecompany"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="48dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Bike Company"
+        android:id="@+id/textView19"
+        android:layout_below="@+id/editTextbloodgroup"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="45dp" />
 
 </RelativeLayout>
