--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,6 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="#ff2ee4ff"
     tools:context="com.sangam.aditya.smarthelmet.Registration">
 
     <TextView
@@ -12,7 +13,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/name"
         android:id="@+id/textViewname"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="20dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
@@ -24,7 +25,7 @@
         android:id="@+id/textViewSubHeading"
         android:layout_above="@+id/editTextnumber"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="66dp" />
+        android:layout_marginBottom="14dp" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -35,7 +36,7 @@
         android:id="@+id/editTextnumber"
         android:layout_above="@+id/button3"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="51dp" />
+        android:layout_marginBottom="21dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -54,7 +55,37 @@
         android:ems="10"
         android:id="@+id/editTextname"
         android:layout_below="@+id/textViewname"
+        android:layout_alignLeft="@+id/editTextnumber"
+        android:layout_alignStart="@+id/editTextnumber"
+        android:layout_marginTop="27dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Enter Gender"
+        android:id="@+id/textView15"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/editTextname"
+        android:layout_centerHorizontal="true" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Male"
+        android:id="@+id/switch1"
+        android:layout_below="@+id/textView15"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="48dp" />
+        android:layout_marginTop="9dp"
+        android:layout_marginBottom="22dp"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editTextmedicalhistory"
+        android:hint="Enter Medical History"
+        android:layout_above="@+id/textViewSubHeading"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="61dp" />
 
 </RelativeLayout>
