--- a/app/src/main/res/layout/activity_set_destination.xml
+++ b/app/src/main/res/layout/activity_set_destination.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.sangam.aditya.smarthelmet.SetDestination"
-    android:background="#ffff0500">
+    android:background="#ff2ee4ff">
 
     <Button
         android:layout_width="wrap_content"
@@ -21,21 +21,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editTextSource"
-        android:hint="Source"
+        android:hint=" Source Location \n Leave this blank \n in order to start \n from current location"
         android:singleLine="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="106dp" />
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:singleLine="true"
         android:id="@+id/editTextDestination"
-        android:hint="Destination"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:hint="Destination Location"
+        android:layout_marginTop="105dp"
+        android:layout_below="@+id/editTextSource"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
