--- a/app/src/main/res/layout/activity_show_profile.xml
+++ b/app/src/main/res/layout/activity_show_profile.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.sangam.aditya.smarthelmet.ShowProfile"
-    android:background="#ffff0500">
+    android:background="#ff2ee4ff">
 
     <TextView
         android:layout_width="wrap_content"
@@ -20,7 +20,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"        android:text="Small Text"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Small Text"
         android:id="@+id/textViewname"
         android:layout_marginBottom="34dp"
         android:layout_above="@+id/textViewphonenumber"
@@ -106,20 +107,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="ESTIMATED PETROL REMAINING"
+        android:text="Medical History :"
         android:id="@+id/textView5"
-        android:layout_marginTop="39dp"
+        android:layout_marginTop="44dp"
         android:layout_below="@+id/textView9"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Calculating..."
-        android:id="@+id/textViewpetrolleft"
-        android:layout_marginTop="33dp"
-        android:layout_below="@+id/textView5"
-        android:layout_toRightOf="@+id/textView12"
-        android:layout_toEndOf="@+id/textView12" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/textViewmedicalhistory"
+        android:layout_alignTop="@+id/textView5"
+        android:layout_alignLeft="@+id/textViewbikemodel"
+        android:layout_alignStart="@+id/textViewbikemodel" />
+
 </RelativeLayout>
